# GIRRewrite

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  LICENSE.md  README.md  alembic.ini  config.example.json  dev.docker-compose.yml  docker-compose.yml  extensions.py  main.py  migrate-from-mongo.py  pyproject.toml  requirements.txt  scrape_emojis.py  setup.py  sync_commands.py  test_cog.py
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 0e74907af7d5_create_initial_database_structure.py  46f3fe7eec76_create_initial_database_structure.py  aa242258240c_create_initial_database_structure.py
cogs/: shared.py
cogs/commands/: context_commands.py
cogs/monitors/: logging.py
core/: __init__.py  bot.py  database.py  model.py  tree.py  util.py
core/alembic/: env.py
core/domain/: __init__.py
core/model/: __init__.py  base.py  case.py  filter_excluded_channel.py  filter_word.py  guild_setting.py  locked_channel.py  logging_excluded_channel.py  meme.py  raid_phrase.py  sticky_role.py  tag.py  tag_button.py  user.py  user_birthday.py  user_xp.py
core/repository/: __init__.py  case_repository.py  tag_repository.py  user_repository.py  user_respository.py  user_xp_repository.py
core/service/: __init__.py  case_service.py  tag_service.py  user_service.py  user_xp_service.py
core/ui/: __init__.py
data-mongo/model/: user.py
examples/: cog.py
models/: base.py
utils/: __init__.py  autocompleters.py  cache.py  config.py  context.py  database.py  fetchers.py  jobs.py  logger.py  logging.py  misc.py  tasks.py
(+110 files in other folders)
